# coding-agent-va

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  README.md  justfile  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vite.config.ts
.codex/: config.toml
app/: package.json
configs/: node-description-edited-system-prompt.md  node-description-impacted-system-prompt.md  node-description-system-prompt.md
docs/: AGENT_SESSION_PROTOCOLS.md  AGENT_SESSION_TASKS.md  AGENT_VIS_BRIDGE.md  CODEX_APP_SERVER.md  PLANS.md
src/: App.module.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_session.rs  app_config.rs  indexer.rs  lib.rs  session_watch.rs  ts_bindings.rs
src-tauri/src/agent_session/: activity.rs  cache.rs  commands.rs  description.rs  file_system.rs  git.rs  json.rs  paths.rs  protocols.rs  session_details.rs  session_diff.rs  state.rs  tests.rs  time.rs  titles.rs  types.rs  watch.rs
src-tauri/src/agent_session/activity/: codex.rs  file_activity.rs  mod.rs  shell.rs  tool_calls.rs
src-tauri/src/agent_session/description/: codex_api.rs  generator.rs
src-tauri/src/agent_session/protocols/: claude.rs  codex.rs  mod.rs  pi.rs  session_protocol.rs
src-tauri/src/indexer/: README.md  graph.rs  import_extractor.rs  mod.rs  parser_registry.rs  symbol_extractor.rs  workspace_dependencies.rs  workspace_dependencies_tests.rs  workspace_index.rs  workspace_indexer.rs
src-tauri/src/shared/: logger.rs
tools/: justfile.node  justfile.rust
(+119 files in other folders)
